--- a/extensions/pipeline-catalog.yaml
+++ b/extensions/pipeline-catalog.yaml
@@ -4,6 +4,6 @@ metadata:
   creationTimestamp: null
 spec:
   repositories:
-  - gitRef: 4b04ad5c52b1114a71f2066330505d7840f91f9e
-    gitUrl: https://github.com/jenkins-x/jx3-pipeline-catalog
+  - gitRef: master
+    gitUrl: https://github.com/bachu-org/jx3-pipeline-catalog
     label: JX3 Pipeline Catalog
